--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,11 @@ body{
 h1{
     color: white;
 }
+.ball{
+    margin: auto;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background-color: blue;
+    
+}
