--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,14 @@ h1{
     color: white;
 }
 .ball{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin: auto;
     height: 100px;
     width: 100px;
     border-radius: 50%;
     background-color: blue;
-    
+    font-size: 22px;
+    font-weight: bold;
 }
