Add antoer ball

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 body{
     background-color: black;
 }
@@ -16,4 +19,8 @@ h1{
     font-size: 22px;
     font-weight: bold;
     transition: 1s;
+}
+.ball2{
+    background-color:yellow;
+    margin-top: 10px;
 }
